# tagore

./: README.md  base.svg.p  build.sh  daVinci.pl  daVinci.py  setup.cfg  setup.py  tagore  tagore.py  test.bed
example_ideogram/: 1KGP-MXL104_chr1.bed  1KGP-MXL104_chr2.bed  test.bed
scripts/: rfmix2tagore.py
src/tagore/: __init__.py  main.py
src/tagore/scripts/: LICENSE  rfmix2tagore.py
src/tagore/tests/: 00_printif_test.py
tests/: 00_printif_test.py
