[metadata]
name = tagore
version = 1.1.2
author = Applied Bioinformatics Laboratory
author_email = abil@ihrc.com
description = A simple way to visualize features on human chromosome ideograms
keywords =
    Human
    chromosome
    ideogram
    visualization
url = https://github.com/jordanlab/tagore
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Visualization

[options]
name = tagore
packages = find_namespace:  
include_package_data = True
install_requires = click
python_requires = >=3.6
# scripts = tagore/scripts/rfmix2tagore.py

[options.packages.find]
where=src
exclude=tagore.tests*

[options.entry_points]
console_scripts =
    tagore = tagore.main:run
    rfmix2tagore = tagore.scripts.rfmix2tagore:main


[options.package_data]
* = *.svg.p